--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
     <string name="menu_trade">거래관리</string>
     <string name="menu_setting">설정</string>
     <string name="menu_using">이용약관</string>
-    <string name="tab_text_1">상환이력정보</string>
-    <string name="tab_text_2">현재재정수준</string>
-    <string name="tab_text_3">신용거래기간</string>
+    <string name="tab_text_1">상환이력</string>
+    <string name="tab_text_2">재정수준</string>
+    <string name="tab_text_3">거래기간</string>
     <string name="tab_text_4">대출</string>
     <string name="tab_text_5">임의</string>
 </resources>
