--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">EnDaTa!</string>
 
-    <string name="menu_credit">신용등급</string>
-    <string name="menu_trade">거래관리</string>
+    <string name="menu_credit">나의 신용</string>
+    <string name="menu_trade">거래 관리</string>
+    <string name="menu_data_monitoring">데이터 활용 모니터링</string>
+    <string name="menu_notice">알림</string>
+
     <string name="menu_setting">설정</string>
     <string name="menu_using">이용약관</string>
 </resources>
