--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="menu_credit">나의 신용</string>
     <string name="menu_trade">거래 관리</string>
-    <string name="menu_data_monitoring">데이터 활용 모니터링</string>
+    <string name="menu_monitor">데이터 활용 모니터링</string>
     <string name="menu_notice">알림</string>
 
     <string name="menu_setting">설정</string>
